--- a/scss/style.scss
+++ b/scss/style.scss
@@ -53,6 +53,7 @@
 /***** 優先させたい&個別に当てるクラス *****/
 @import "priority/media"; // width
 @import "priority/color"; // 色
+@import "priority/font"; // フォント
 @import "priority/other"; // ファイルをつくるほどでもないもの
 
 
